--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="canonical" href="https://waterdamageremediation.github.io/waterdamagerestorationdallas/">
     
     <link rel="preload" href="css/styles.css" as="style">
     <link rel="preload" href="media/logo.png" as="image" type="image/png" fetchpriority="high" width="144" height="76">
