Add WebSite schema

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <link rel="preload" href="media/logo.png" as="image" type="image/png" fetchpriority="high" width="144" height="76">
     
     <link rel="stylesheet" href="css/styles.css">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "WebSite",
+      "name": "Water Damage Restoration in Dallas",
+      "url": "https://waterdamageremediation.github.io/"
+    }
+    </script>
     
     <script type="application/ld+json">
     {
